deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-html
  labels:
    app: my-html
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-html
  template:
    metadata:
      labels:
        app: my-html
    spec:
      containers:
      - name: demo-html
        image: my-html:v2
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 80
