redis.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
