service.yml
apiVersion: v1
kind: Service

metadata:
  name: html-demo-service

spec:
  type: NodePort

  selector:
    app: my-html              # label, image na

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
