ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
    - host: myapp.local
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: html-demo-service
                port:
                  number: 80

    - host: api.myapp.local
      http:
        paths:
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: html-demo-service
                port:
                  number: 80
